service.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2020-12-22T08:13:07Z"
  labels:
    app: node-app
  name: node-app
  namespace: node-app
  resourceVersion: "89662"
  selfLink: /api/v1/namespaces/default/services/node-app
  uid: 01237fd9-7335-4a60-ad98-08e5a5118e87
spec:
  clusterIP:
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 31234
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: node-app
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
