node-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-ingress
  Namespace: node-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: myapp.nodeapp.com
  - http:
      paths:
      - path: /myapp
        pathType: Prefix
        backend:
          service:
            name: node-app
            port:
              number: 80
